--- a/Surge/Matrix3.conf
+++ b/Surge/Matrix3.conf
@@ -1,5 +1,5 @@
 # > 矩阵配置:Surge        Author:Matrix3
-# > 更新时间:2023-06-19 11:00 UTC/GMT +8
+# > 更新时间:2023-07-01 17:00 UTC/GMT +8
 [General]
 # > 日志级别
 loglevel = notify
@@ -8,22 +8,25 @@ loglevel = notify
 test-timeout = 5
 
 # > 直连测试
-internet-test-url = http://www.qualcomm.cn/generate_204
+internet-test-url = http://taobao.com/
 
 # > 代理测试
-proxy-test-url = http://cp.cloudflare.com/generate_204
+proxy-test-url = http://cp.cloudflare.com/
 
 # > 排除简单主机名
 exclude-simple-hostnames = true
 
-# > IPv6 支持
+# > IP6 支持
 ipv6 = false
 ipv6-vif = auto
+
+# > UDP 优先级
+udp-priority = false
 
 # > DNS 服务器
 dns-server = 223.5.5.5, 119.29.29.29
 
-# > 加密 DNS 服务器
+# > DoH 服务器
 encrypted-dns-server = https://doh.pub/dns-query, https://dns.alidns.com/dns-query
 
 # > Wi-Fi 助理
@@ -32,11 +35,11 @@ wifi-assist = false
 # > GEOIP 数据库
 geoip-maxmind-url = https://github.com/Masaiki/GeoIP2-CN/raw/release/Country.mmdb
 
-# > 显示拒绝的错误页面
+# > 显示拒绝错误页
 show-error-page-for-reject = true
 
 # > 跳过代理
-skip-proxy = www.abchina.com.cn, localhost, *.local, injections.adguard.org, local.adguard.org, captive.apple.com, guzzoni.apple.com, 0.0.0.0/8, 10.0.0.0/8, 17.0.0.0/8, 100.64.0.0/10, 127.0.0.0/8, 169.254.0.0/16, 172.16.0.0/12, 192.0.0.0/24, 192.0.2.0/24, 192.168.0.0/16, 192.88.99.0/24, 198.18.0.0/15, 198.51.100.0/24, 203.0.113.0/24, 224.0.0.0/4, 240.0.0.0/4, 255.255.255.255/32
+skip-proxy = 127.0.0.1, 192.168.0.0/16, 10.0.0.0/8,172.16.0.0/12,100.64.0.0/10, 17.0.0.0/8, *.local, *.crashlytics.com, seed-sequoia.siri.apple.com, localhost, sequoia.apple.com, www.abchina.com.cn
 
 # > 代理服务端口
 wifi-access-http-port = 5588
@@ -46,34 +49,18 @@ wifi-access-socks5-port = 8855
 allow-wifi-access = false
 allow-hotspot-access = false
 
-# > HTTP-API控制器
-http-api = lmcfmy20@127.0.0.1:3355
+# > HTTP-API控制
+http-api = Matrix@127.0.0.1:3355
 http-api-tls = false
 http-api-web-dashboard = false
 
-# > udp优先级
-udp-priority = false
-
 [Replica]
-# > 隐藏苹果请求
 hide-apple-request = 1
-
-# > 隐藏Crashlytics请求
 hide-crashlytics-request = true
-
-# > 关键词过滤器
 use-keyword-filter = false
-
-# > 隐藏UDP会话
 hide-udp = 0
-
-# > 隐藏崩溃报告请求
 hide-crash-reporter-request = 0
-
-# > 关键字过滤器类型
 keyword-filter-type = pattern
-
-# > 关键字过滤器
 keyword-filter = *
 
 [Proxy Group]
@@ -102,22 +89,22 @@ keyword-filter = *
 黑白名单 = select, DIRECT, REJECT, 自行选择, 自动选择, 香港节点, 台湾节点, 日本节点, 韩国节点, 狮城节点, 美国节点, no-alert=0, hidden=0, include-all-proxies=0
 
 # > 香港节点
-香港节点 = url-test, update-interval=0, policy-regex-filter=(?=.*(香港|港|HK|(?i)HongKong))^((?!(台湾|日本|韩国|新加坡|美国)).)*$, no-alert=0, hidden=0, include-all-proxies=0, include-other-group=自动选择
+香港节点 = url-test, update-interval=0, policy-regex-filter=香港|港|HK|(?i)HongKong, no-alert=0, hidden=1, include-all-proxies=0, include-other-group=自动选择
 
 # > 台湾节点
-台湾节点 = url-test, update-interval=0, policy-regex-filter=(?=.*(台湾|台|TW|(?i)Taiwan))^((?!(香港|日本|韩国|新加坡|美国)).)*$, no-alert=0, hidden=0, include-all-proxies=0, include-other-group=自动选择
+台湾节点 = url-test, update-interval=0, policy-regex-filter=台湾|台|TW|(?i)Taiwan, no-alert=0, hidden=1, include-all-proxies=0, include-other-group=自动选择
 
 # > 日本节点
-日本节点 = url-test, update-interval=0, policy-regex-filter=(?=.*(日本|日|JP|(?i)Japan))^((?!(香港|台湾|韩国|新加坡|美国)).)*$, no-alert=0, hidden=0, include-all-proxies=0, include-other-group=自动选择
+日本节点 = url-test, update-interval=0, policy-regex-filter=日本|日|JP|(?i)Japan, no-alert=0, hidden=1, include-all-proxies=0, include-other-group=自动选择
 
 # > 韩国节点
-韩国节点 = url-test, update-interval=0, policy-regex-filter=(?=.*(韩国|韩|KR|(?i)SouthKorea))^((?!(香港|台湾|日本|新加坡|美国)).)*$, no-alert=0, hidden=0, include-all-proxies=0, include-other-group=自动选择
+韩国节点 = url-test, update-interval=0, policy-regex-filter=韩国|韩|KR|(?i)SouthKorea, no-alert=0, hidden=1, include-all-proxies=0, include-other-group=自动选择
 
 # > 狮城节点
-狮城节点 = url-test, update-interval=0, policy-regex-filter=(?=.*(新加坡|狮|SG|(?i)Singapore))^((?!(香港|台湾|日本|韩国|美国)).)*$, no-alert=0, hidden=0, include-all-proxies=0, include-other-group=自动选择
+狮城节点 = url-test, update-interval=0, policy-regex-filter=新加坡|新|SG|(?i)Singapore, no-alert=0, hidden=1, include-all-proxies=0, include-other-group=自动选择
 
 # > 美国节点
-美国节点 = url-test, update-interval=0, policy-regex-filter=(?=.*(美国|美|US|(?i)UnitedStates))^((?!(香港|台湾|日本|韩国|新加坡)).)*$, no-alert=0, hidden=0, include-all-proxies=0, include-other-group=自动选择
+美国节点 = url-test, update-interval=0, policy-regex-filter=美国|美|US|(?i)UnitedStates, no-alert=0, hidden=1, include-all-proxies=0, include-other-group=自动选择
 
 [Rule]
 # > 规则修正
@@ -159,23 +146,15 @@ FINAL,黑白名单,dns-failed
 [URL Rewrite]
 # > 谷歌重定向
 ^https?:\/\/(www.)?(g|google)\.cn https://www.google.com 302
-
-# > 谷歌重定向
 ^https?:\/\/(ditu|maps).google\.cn https://maps.google.com 302
 
 [MITM]
-# > 跳过服务器证书验证
-skip-server-cert-verify = false
-
 # > 主机名
 hostname = www.google.cn
 
-# > TCP 链接
-tcp-connection = true
-
-# > HTTP 2
+# > HTTP2
 h2 = true
 
-# > 生成证书会生成CA-PASSPHRASE与CA-P12信息
+# > 密码与证书
 ca-passphrase = 
 ca-p12 = 
