--- a/Surge/Matrix5.conf
+++ b/Surge/Matrix5.conf
@@ -1,4 +1,4 @@
-# Surge5配置 By Matrix 2023-07-01 00:45
+# Surge5配置 By Matrix 2023-07-01 17:00
 [General]
 loglevel = notify
 test-timeout = 5
@@ -15,7 +15,7 @@ geoip-maxmind-url = https://github.com/Masaiki/GeoIP2-CN/raw/release/Country.mmd
 wifi-access-http-port = 5588
 wifi-access-socks5-port = 8855
 show-error-page-for-reject = true
-http-api = Fmylmc20@127.0.0.1:3355
+http-api = Matrix@127.0.0.1:3355
 http-api-tls = false
 http-api-web-dashboard = true
 wifi-assist = false
@@ -32,7 +32,7 @@ keyword-filter-type = pattern
 keyword-filter = *
 
 [Proxy Group]
-自行选择 = select, no-alert=0, hidden=0, include-all-proxies=0, update-interval=0, policy-regex-filter=^, policy-path=🔴订阅链接🟢
+自行选择 = select, no-alert=0, hidden=0, include-all-proxies=0, update-interval=0, policy-regex-filter=^, policy-path=订阅链接 // 🧸+🧸=🧸🧸
 自动选择 = url-test, no-alert=0, hidden=0, include-all-proxies=0, update-interval=0, policy-regex-filter=^, include-other-group=自行选择
 
 苹果服务 = select, DIRECT, REJECT, 自行选择, 自动选择, 香港节点, 台湾节点, 日本节点, 韩国节点, 狮城节点, 美国节点, no-alert=0, hidden=0, include-all-proxies=0
