--- a/Clash/Matrix3.yaml
+++ b/Clash/Matrix3.yaml
@@ -1,38 +1,39 @@
-# > 矩阵配置:Clash        Author:Matrix3
-# > 更新时间:2023-07-01 00:59 UTC/GMT +8
+# 配置名称: Clash 配置
+# 配置作者: Centralmatrix3
+# 更新时间: 23-07-05 02:20
 
-# > 混合端口
+# 混合端口
 mixed-port: 7890
 
-# > 允许局域网
+# 允许局域网
 allow-lan: false
 
-# > 绑定地址
+# 绑定地址
 bind-address: '*'
 
-# > 模式
+# 模式
 mode: rule
 
-# > 日志级别
+# 日志级别
 log-level: info
 
-# > IPv6
+# IPv6
 ipv6: false
 
-# > 外部控制器
+# 外部控制器
 external-controller: 127.0.0.1:9090
 
-# > HOSTS
+# HOSTS
 hosts:
   'mtalk.google.com': 108.177.125.188
   'dl.google.com': 180.163.151.161
   'dl.l.google.com': 180.163.151.161
 
-# > 配置文件
+# 配置文件
 profile:
   store-selected: false
 
-# > DNS
+# DNS
 dns:
   enable: false
   listen: 0.0.0.0:53
@@ -61,10 +62,10 @@ dns:
     geoip: true
     ipcidr:
 
-# > 本地节点
+# 本地节点
 proxies:
 
-# > 订阅节点
+# 订阅节点
 proxy-providers:
   Proxy:
     type: http
@@ -76,7 +77,7 @@ proxy-providers:
       interval: 600
       url: http://www.gstatic.com/generate_204
 
-# > 过滤节点
+# 过滤节点
   HK:
     filter: 港|HK|(?i)Hong
     type: file
@@ -122,7 +123,7 @@ proxy-providers:
       interval: 600
       url: http://www.gstatic.com/generate_204
 
-# > 策略组
+# 代理策略组
 proxy-groups:
   - name: "港台番剧"
     type: select
@@ -135,6 +136,8 @@ proxy-groups:
     type: select
     proxies:
       - DIRECT
+      - 香港节点
+      - 台湾节点
 
   - name: "国际媒体"
     type: select
@@ -198,7 +201,7 @@ proxy-groups:
     url: 'http://www.gstatic.com/generate_204'
     interval: 300
 
-# > 订阅规则
+# 订阅规则
 rule-providers:
   规则修正:
     type: http
@@ -249,7 +252,14 @@ rule-providers:
     url: https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/Clash/Rule/Global.yaml
     interval: 86400
 
-# > 规则
+  局域网络:
+    type: http
+    behavior: classical
+    path: ./Rule/Global.yaml
+    url: https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/Clash/Rule/LAN.yaml
+    interval: 86400
+
+# 分流规则
 rules:
   - RULE-SET, 规则修正, DIRECT
   - RULE-SET, 广告拦截, REJECT
@@ -258,14 +268,6 @@ rules:
   - RULE-SET, 港台番剧, 港台番剧
   - RULE-SET, 国内影视, 国内影视
   - RULE-SET, 全球加速, 全球加速
-  - IP-CIDR, 192.168.0.0/16, DIRECT
-  - IP-CIDR, 10.0.0.0/8, DIRECT
-  - IP-CIDR, 172.16.0.0/12, DIRECT
-  - IP-CIDR, 127.0.0.0/8, DIRECT
-  - IP-CIDR, 100.64.0.0/10, DIRECT
-  - IP-CIDR, 224.0.0.0/4, DIRECT
-  - IP-CIDR, fe80::/10, DIRECT
-  - IP-CIDR, 119.28.28.28/32, DIRECT
-  - IP-CIDR, 182.254.116.0/24, DIRECT
+  - RULE-SET, 局域网络, DIRECT
   - GEOIP, CN, DIRECT
   - MATCH, 黑白名单
