--- a/Surge/Matrix5.conf
+++ b/Surge/Matrix5.conf
@@ -1,4 +1,5 @@
-# Surge5配置 By Matrix 2023-07-01 17:00
+# Surge5配置 By Centralmatrix3 2023-07-05
+
 [General]
 loglevel = notify
 test-timeout = 5
@@ -10,7 +11,7 @@ exclude-simple-hostnames = true
 ipv6 = false
 ipv6-vif = auto
 dns-server = 223.5.5.5, 119.29.29.29
-encrypted-dns-server = https://doh.pub/dns-query, https://dns.alidns.com/dns-query
+# encrypted-dns-server = https://doh.pub/dns-query, https://dns.alidns.com/dns-query
 geoip-maxmind-url = https://github.com/Masaiki/GeoIP2-CN/raw/release/Country.mmdb
 wifi-access-http-port = 5588
 wifi-access-socks5-port = 8855
@@ -32,7 +33,7 @@ keyword-filter-type = pattern
 keyword-filter = *
 
 [Proxy Group]
-自行选择 = select, no-alert=0, hidden=0, include-all-proxies=0, update-interval=0, policy-regex-filter=^, policy-path=订阅链接 // 🧸+🧸=🧸🧸
+自行选择 = select, no-alert=0, hidden=0, include-all-proxies=0, update-interval=0, policy-regex-filter=^, policy-path=订阅链接 // 🧸
 自动选择 = url-test, no-alert=0, hidden=0, include-all-proxies=0, update-interval=0, policy-regex-filter=^, include-other-group=自行选择
 
 苹果服务 = select, DIRECT, REJECT, 自行选择, 自动选择, 香港节点, 台湾节点, 日本节点, 韩国节点, 狮城节点, 美国节点, no-alert=0, hidden=0, include-all-proxies=0
