--- a/Loon/Matrix3.conf
+++ b/Loon/Matrix3.conf
@@ -1,6 +1,6 @@
 # 配置名称: Loon 配置
 # 配置作者: Centralmatrix3
-# 更新时间: 23-07-05 02:15
+# 更新时间: 23-07-05 02:40
 
 [General]
 # 接口模式
@@ -56,7 +56,7 @@ switch-node-after-failure-times = 3
 
 [Remote Filter]
 # 全部节点
-全部 = NameRegex, FilterKey = "*"
+全部 = NameRegex, FilterKey = "^"
 
 # 香港节点
 香港 = NameRegex, FilterKey = "(?i)(香港|港|HK|HongKong)"
