--- a/Surge/Matrix3.conf
+++ b/Surge/Matrix3.conf
@@ -1,160 +1,181 @@
-# > 矩阵配置:Surge        Author:Matrix3
-# > 更新时间:2023-07-01 17:00 UTC/GMT +8
+# 配置名称: Surge 配置
+# 配置作者: Centralmatrix3
+# 更新时间: 23-07-05 10:05
+
 [General]
-# > 日志级别
+# 日志级别
 loglevel = notify
 
-# > 测试超时
+# 测试超时
 test-timeout = 5
 
-# > 直连测试
+# 直连网络测试
 internet-test-url = http://taobao.com/
 
-# > 代理测试
+# 代理服务测试
 proxy-test-url = http://cp.cloudflare.com/
 
-# > 排除简单主机名
+# 排除简单主机名
 exclude-simple-hostnames = true
 
-# > IP6 支持
+# IP6 支持
 ipv6 = false
 ipv6-vif = auto
 
-# > UDP 优先级
+# UDP 优先级
 udp-priority = false
 
-# > DNS 服务器
+# DNS 服务器
 dns-server = 223.5.5.5, 119.29.29.29
 
-# > DoH 服务器
+# DoH 服务器
 encrypted-dns-server = https://doh.pub/dns-query, https://dns.alidns.com/dns-query
 
-# > Wi-Fi 助理
+# Wi-Fi 助理
 wifi-assist = false
 
-# > GEOIP 数据库
+# GEOIP 数据库
 geoip-maxmind-url = https://github.com/Masaiki/GeoIP2-CN/raw/release/Country.mmdb
 
-# > 显示拒绝错误页
+# 显示拒绝错误页
 show-error-page-for-reject = true
 
-# > 跳过代理
+# 跳过代理
 skip-proxy = 127.0.0.1, 192.168.0.0/16, 10.0.0.0/8,172.16.0.0/12,100.64.0.0/10, 17.0.0.0/8, *.local, *.crashlytics.com, seed-sequoia.siri.apple.com, localhost, sequoia.apple.com, www.abchina.com.cn
 
-# > 代理服务端口
+# 代理服务端口
 wifi-access-http-port = 5588
 wifi-access-socks5-port = 8855
 
-# > 允许访问
+# 允许访问
 allow-wifi-access = false
 allow-hotspot-access = false
 
-# > HTTP-API控制
+# HTTP-API控制
 http-api = Matrix@127.0.0.1:3355
 http-api-tls = false
 http-api-web-dashboard = false
 
 [Replica]
+# 隐藏苹果请求
 hide-apple-request = 1
+
+# 隐藏崩溃请求
 hide-crashlytics-request = true
+
+# 使用关键字过滤器
 use-keyword-filter = false
+
+# 隐藏UDP
 hide-udp = 0
+
+# 隐藏崩溃报告者请求
 hide-crash-reporter-request = 0
+
+# 关键字过滤器类型
 keyword-filter-type = pattern
+
+# 关键字过滤器
 keyword-filter = *
 
 [Proxy Group]
-# > 自行选择
-自行选择 = select, no-alert=0, hidden=0, include-all-proxies=0, update-interval=0, policy-regex-filter=^, policy-path=🧸订阅链接🧸
+# 自行选择
+自行选择 = select, no-alert=0, hidden=0, include-all-proxies=0, update-interval=0, policy-regex-filter=^, policy-path=订阅链接 // 🧸
 
-# > 自动选择
+# 自动选择
 自动选择 = url-test, no-alert=0, hidden=0, include-all-proxies=0, update-interval=0, policy-regex-filter=^, include-other-group=自行选择
 
-# > 苹果服务
+# 苹果服务
 苹果服务 = select, DIRECT, REJECT, 自行选择, 自动选择, 香港节点, 台湾节点, 日本节点, 韩国节点, 狮城节点, 美国节点, no-alert=0, hidden=0, include-all-proxies=0
 
-# > 港台番剧
+# 港台番剧
 港台番剧 = select, DIRECT, REJECT, 自行选择, 自动选择, 香港节点, 台湾节点, 日本节点, 韩国节点, 狮城节点, 美国节点, no-alert=0, hidden=0, include-all-proxies=0
 
-# > 国内影视
+# 国内影视
 国内影视 = select, DIRECT, REJECT, no-alert=0, hidden=0, include-all-proxies=0
 
-# > 国际媒体
+# 国际媒体
 国际媒体 = select, DIRECT, REJECT, 自行选择, 自动选择, 香港节点, 台湾节点, 日本节点, 韩国节点, 狮城节点, 美国节点, no-alert=0, hidden=0, include-all-proxies=0
 
-# > 全球加速
+# 全球加速
 全球加速 = select, DIRECT, REJECT, 自行选择, 自动选择, 香港节点, 台湾节点, 日本节点, 韩国节点, 狮城节点, 美国节点, no-alert=0, hidden=0, include-all-proxies=0
 
-# > 黑白名单
+# 黑白名单
 黑白名单 = select, DIRECT, REJECT, 自行选择, 自动选择, 香港节点, 台湾节点, 日本节点, 韩国节点, 狮城节点, 美国节点, no-alert=0, hidden=0, include-all-proxies=0
 
-# > 香港节点
-香港节点 = url-test, update-interval=0, policy-regex-filter=香港|港|HK|(?i)HongKong, no-alert=0, hidden=1, include-all-proxies=0, include-other-group=自动选择
+# 香港节点
+香港节点 = url-test, update-interval=0, policy-regex-filter=香港|港|HK|(?i)HongKong, no-alert=0, hidden=1, include-all-proxies=0, include-other-group=自行选择
 
-# > 台湾节点
-台湾节点 = url-test, update-interval=0, policy-regex-filter=台湾|台|TW|(?i)Taiwan, no-alert=0, hidden=1, include-all-proxies=0, include-other-group=自动选择
+# 台湾节点
+台湾节点 = url-test, update-interval=0, policy-regex-filter=台湾|台|TW|(?i)Taiwan, no-alert=0, hidden=1, include-all-proxies=0, include-other-group=自行选择
 
-# > 日本节点
-日本节点 = url-test, update-interval=0, policy-regex-filter=日本|日|JP|(?i)Japan, no-alert=0, hidden=1, include-all-proxies=0, include-other-group=自动选择
+# 日本节点
+日本节点 = url-test, update-interval=0, policy-regex-filter=日本|日|JP|(?i)Japan, no-alert=0, hidden=1, include-all-proxies=0, include-other-group=自行选择
 
-# > 韩国节点
-韩国节点 = url-test, update-interval=0, policy-regex-filter=韩国|韩|KR|(?i)SouthKorea, no-alert=0, hidden=1, include-all-proxies=0, include-other-group=自动选择
+# 韩国节点
+韩国节点 = url-test, update-interval=0, policy-regex-filter=韩国|韩|KR|(?i)SouthKorea, no-alert=0, hidden=1, include-all-proxies=0, include-other-group=自行选择
 
-# > 狮城节点
-狮城节点 = url-test, update-interval=0, policy-regex-filter=新加坡|新|SG|(?i)Singapore, no-alert=0, hidden=1, include-all-proxies=0, include-other-group=自动选择
+# 狮城节点
+狮城节点 = url-test, update-interval=0, policy-regex-filter=新加坡|新|SG|(?i)Singapore, no-alert=0, hidden=1, include-all-proxies=0, include-other-group=自行选择
 
-# > 美国节点
-美国节点 = url-test, update-interval=0, policy-regex-filter=美国|美|US|(?i)UnitedStates, no-alert=0, hidden=1, include-all-proxies=0, include-other-group=自动选择
+# 美国节点
+美国节点 = url-test, update-interval=0, policy-regex-filter=美国|美|US|(?i)UnitedStates, no-alert=0, hidden=1, include-all-proxies=0, include-other-group=自行选择
 
 [Rule]
-# > 规则修正
-RULE-SET,https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/Surge/Rule/Unbreak.list,DIRECT // 规则修正
+# 规则修正
+RULE-SET,https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/Surge/Rule/Unbreak.list,DIRECT
 
-# > 广告拦截
-RULE-SET,https://raw.githubusercontent.com/privacy-protection-tools/anti-AD/master/anti-ad-surge.txt,REJECT //广告拦截
+# 广告拦截
+RULE-SET,https://raw.githubusercontent.com/privacy-protection-tools/anti-AD/master/anti-ad-surge.txt,REJECT
 
-# > 网络测速
-RULE-SET,https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/Surge/Rule/Speedtest.list,全球加速 // 网络测速
+# 网络测速
+RULE-SET,https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/Surge/Rule/Speedtest.list,全球加速
 
-# > 国际抖音
-RULE-SET,https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/Surge/Rule/TikTok.list,国际媒体 // 国际抖音
+# 国际抖音
+RULE-SET,https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/Surge/Rule/TikTok.list,国际媒体
 
-# > 国际媒体
-RULE-SET,https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/Surge/Rule/Streaming.list,国际媒体 // 国际媒体
+# 国际媒体
+RULE-SET,https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/Surge/Rule/Streaming.list,国际媒体
 
-# > 港台番剧
-RULE-SET,https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/Surge/Rule/StreamingSE.list,港台番剧 // 港台番剧
+# 港台番剧
+RULE-SET,https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/Surge/Rule/StreamingSE.list,港台番剧
 
-# > 国内影视
-RULE-SET,https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/Surge/Rule/StreamingCN.list,国内影视 // 国内影视
+# 国内影视
+RULE-SET,https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/Surge/Rule/StreamingCN.list,国内影视
 
-# > 全球加速
-RULE-SET,https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/Surge/Rule/Global.list,全球加速 // 全球加速
+# 全球加速
+RULE-SET,https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/Surge/Rule/Global.list,全球加速
 
-# > 苹果服务
-RULE-SET,https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/Surge/Rule/Apple.list,苹果服务 // 苹果服务
+# 苹果服务
+RULE-SET,https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/Surge/Rule/Apple.list,苹果服务
 
-# > 局域网络
-RULE-SET,https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/Surge/Rule/LAN.list,DIRECT // 局域网络
+# 局域网络
+RULE-SET,https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/Surge/Rule/LAN.list,DIRECT
 
-# > 国内规则
-RULE-SET,https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/Surge/Rule/ChinaASN.list,DIRECT // 国内规则
+# 国内规则
+RULE-SET,https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/Surge/Rule/ChinaASN.list,DIRECT
 
-# > 最终规则
+# 最终规则
 FINAL,黑白名单,dns-failed
 
 [URL Rewrite]
-# > 谷歌重定向
+# 谷歌重定向
 ^https?:\/\/(www.)?(g|google)\.cn https://www.google.com 302
 ^https?:\/\/(ditu|maps).google\.cn https://maps.google.com 302
 
 [MITM]
-# > 主机名
-hostname = www.google.cn
+# 跳过服务器证书验证
+skip-server-cert-verify = false
 
-# > HTTP2
+# TCP 连接
+tcp-connection = false
+
+# MitM over HTTP2
 h2 = true
 
-# > 密码与证书
-ca-passphrase = 
-ca-p12 = 
+# 主机名
+hostname = www.google.cn
+
+# CA密码与P12证书
+# ca-passphrase = 
+# ca-p12 = 
