--- a/Surge/Matrix5.conf
+++ b/Surge/Matrix5.conf
@@ -1,8 +1,8 @@
-# Surge5配置 By Centralmatrix3 2023-07-05
+# Surge配置 By Centralmatrix3 2023-07-08
 
 [General]
 loglevel = notify
-test-timeout = 5
+test-timeout = 3
 internet-test-url = http://taobao.com/
 proxy-test-url = http://www.gstatic.com/
 allow-wifi-access = false
@@ -51,16 +51,16 @@ keyword-filter = *
 美国节点 = url-test, update-interval=0, policy-regex-filter=美国|美|US|(?i)UnitedStates, no-alert=0, hidden=1, include-all-proxies=0, include-other-group=自行选择
 
 [Rule]
-RULE-SET,https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/Surge/Rule/Unbreak.list,DIRECT // 规则修正
-RULE-SET,https://raw.githubusercontent.com/privacy-protection-tools/anti-AD/master/anti-ad-surge.txt,REJECT // 广告拦截
-RULE-SET,https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/Surge/Rule/TikTok.list,国际媒体 // 国际抖音
-RULE-SET,https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/Surge/Rule/Streaming.list,国际媒体 // 国际媒体
-RULE-SET,https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/Surge/Rule/StreamingSE.list,港台番剧 // 港台番剧
-RULE-SET,https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/Surge/Rule/StreamingCN.list,国内影视 // 国内影视
-RULE-SET,https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/Surge/Rule/Global.list,全球加速 // 全球加速
-RULE-SET,https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/Surge/Rule/Apple.list,苹果服务 // 苹果服务
-RULE-SET,https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/Surge/Rule/LAN.list,DIRECT // 局域网络
-RULE-SET,https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/Surge/Rule/ChinaASN.list,DIRECT // 国内规则
+RULE-SET,https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/Surge/Rule/Unbreak.list,DIRECT
+RULE-SET,https://raw.githubusercontent.com/privacy-protection-tools/anti-AD/master/anti-ad-surge.txt,REJECT
+RULE-SET,https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/Surge/Rule/TikTok.list,国际媒体
+RULE-SET,https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/Surge/Rule/Streaming.list,国际媒体
+RULE-SET,https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/Surge/Rule/StreamingSE.list,港台番剧
+RULE-SET,https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/Surge/Rule/StreamingCN.list,国内影视
+RULE-SET,https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/Surge/Rule/Global.list,全球加速
+RULE-SET,https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/Surge/Rule/Apple.list,苹果服务
+RULE-SET,https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/Surge/Rule/LAN.list,DIRECT
+RULE-SET,https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/Surge/Rule/GeoIPCN.list,DIRECT
 FINAL,黑白名单,dns-failed
 
 [URL Rewrite]
