--- a/Clash/Rule/BiliBili.yaml
+++ b/Clash/Rule/BiliBili.yaml
@@ -1,4 +1,10 @@
+# 名称:哔哩哔哩
+# 作者:ACL4SSR
+
 payload:
+  # USER-AGENT,Bilibili*
+  # USER-AGENT,bili*
+  # USER-AGENT,bili-inter*
   - DOMAIN,apiintl.biliapi.net
   - DOMAIN,upos-hz-mirrorakam.akamaized.net
   - DOMAIN-SUFFIX,acg.tv
