--- a/Loon/Matrix3.conf
+++ b/Loon/Matrix3.conf
@@ -1,6 +1,6 @@
 # 配置名称: Loon 配置
 # 配置作者: Centralmatrix3
-# 更新时间: 23-07-09 20:30
+# 更新时间: 23-07-11 08:45
 
 [General]
 # 接口模式
@@ -178,7 +178,7 @@ https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/Loon/Rules
 # ca-passphrase = 
 
 # 主机名
-hostname = *.example.com,*.sample.com
+hostname = -*.apple.com, -*.icloud.com
 
 # 跳过服务器证书验证
 skip-server-cert-verify = false
