--- a/QuantumultX/Matrix3.conf
+++ b/QuantumultX/Matrix3.conf
@@ -1,10 +1,10 @@
 # 配置名称: QuantumultX 配置
 # 配置作者: Centralmatrix3
-# 更新时间: 23-07-09 20:30
+# 更新时间: 23-07-14 19:12
 
 [general]
 # 服务器检查
-server_check_url=http://www.gstatic.com/generate_204
+server_check_url=http://cp.cloudflare.com/generate_204
 
 # 服务器检查超时
 server_check_timeout=3000
@@ -24,7 +24,7 @@ excluded_routes=239.255.255.250/32, 24.105.30.129/32, 185.60.112.157/32, 185.60.
 # DNS排除列表
 dns_exclusion_list=*.cmpassport.com, *.jegotrip.com.cn, *.icitymobile.mobi, id6.me, *.pingan.com.cn, *.cmbchina.com
 
-# UPD丢弃列表
+# UDP丢弃列表
 udp_drop_list=443
 
 [dns]
