--- a/Surge/Matrix3.conf
+++ b/Surge/Matrix3.conf
@@ -1,6 +1,6 @@
 # 配置名称: Surge 配置
 # 配置作者: Centralmatrix3
-# 更新时间: 23-07-09 20:30
+# 更新时间: 23-07-18 20:20
 
 [General]
 # 日志级别
@@ -13,7 +13,7 @@ test-timeout = 5
 internet-test-url = http://taobao.com/
 
 # 代理服务测试
-proxy-test-url = http://cp.cloudflare.com/
+proxy-test-url = http://cp.cloudflare.com/generate_204
 
 # 排除简单主机名
 exclude-simple-hostnames = true
