--- a/Surge/Matrix5.conf
+++ b/Surge/Matrix5.conf
@@ -1,17 +1,16 @@
-# Surge配置 By Centralmatrix3 2023-07-08
+# Surge配置 By Centralmatrix3 2023-07-21
 
 [General]
 loglevel = notify
-test-timeout = 3
+test-timeout = 5
 internet-test-url = http://taobao.com/
-proxy-test-url = http://www.gstatic.com/
+proxy-test-url = http://cp.cloudflare.com/
 allow-wifi-access = false
 allow-hotspot-access = false
 exclude-simple-hostnames = true
 ipv6 = false
-ipv6-vif = auto
 dns-server = 223.5.5.5, 119.29.29.29
-# encrypted-dns-server = https://doh.pub/dns-query, https://dns.alidns.com/dns-query
+encrypted-dns-server = https://doh.pub/dns-query, https://dns.alidns.com/dns-query
 geoip-maxmind-url = https://github.com/Masaiki/GeoIP2-CN/raw/release/Country.mmdb
 wifi-access-http-port = 5588
 wifi-access-socks5-port = 8855
@@ -60,7 +59,7 @@ RULE-SET,https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/S
 RULE-SET,https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/Surge/Ruleset/Global.list,全球加速
 RULE-SET,https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/Surge/Ruleset/Apple.list,苹果服务
 RULE-SET,https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/Surge/Ruleset/LAN.list,DIRECT
-RULE-SET,https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/Surge/Ruleset/GeoIPCN.list,DIRECT
+RULE-SET,https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/Surge/Ruleset/ChinaASN.list,DIRECT
 FINAL,黑白名单,dns-failed
 
 [URL Rewrite]
