--- a/Clash/Matrix3.yaml
+++ b/Clash/Matrix3.yaml
@@ -1,273 +1,129 @@
 # 配置名称: Clash 配置
 # 配置作者: Centralmatrix3
-# 更新时间: 23-07-09 20:30
+# 更新时间: 23-08-13 01:02
 
-# 混合端口
-mixed-port: 7890
+port: 7890           # HTTP  端口
+socks-port: 7891     # Socks 端口
+redir-port: 7892     # Redir 端口
+mixed-port: 7893     # Mixed 端口
 
-# 允许局域网
-allow-lan: false
-
-# 绑定地址
-bind-address: '*'
-
-# 模式
-mode: rule
-
-# 日志级别
-log-level: info
-
-# IPv6
-ipv6: false
+allow-lan: true      # 允许局域网连接
+bind-address: "*"    # 地址绑定
+mode: rule           # 规则模式
+log-level: info      # 日志级别
+ipv6: false          # IPv6开关
 
 # 外部控制器
 external-controller: 127.0.0.1:9090
 
-# HOSTS
-hosts:
-  'mtalk.google.com': 108.177.125.188
-  'dl.google.com': 180.163.151.161
-  'dl.l.google.com': 180.163.151.161
-
-# 配置文件
-profile:
-  store-selected: false
-
-# DNS
 dns:
-  enable: false
-  listen: 0.0.0.0:53
-  default-nameserver:
+  enable: true       # 禁用系统 DNS
+  ipv6: false        # 关闭 IPv6
+  listen: 0.0.0.0:53 # DNS 监听
+
+# 增强模式:fake-ip或redir-host
+  enhanced-mode: fake-ip
+
+# fake-ip:范围和过滤
+  fake-ip-range: 198.18.0.1/16
+  fake-ip-filter:
+    - "*.lan"
+    - localhost.ptlogin2.qq.com
+    - +.srv.nintendo.net
+    - +.stun.playstation.net
+    - +.msftconnecttest.com
+    - +.msftncsi.com
+    - +.xboxlive.com
+    - msftconnecttest.com
+    - xbox.*.microsoft.com
+    - "*.battlenet.com.cn"
+    - "*.battlenet.com"
+    - "*.blzstatic.cn"
+    - "*.battle.net"
+
+  nameserver:        # 常规 DNS 服务器
     - 223.5.5.5
     - 119.29.29.29
-  enhanced-mode: redir-host
-  fake-ip-range: 198.18.0.1/16 
-  fake-ip-filter:
-    - '*.lan'
-    - localhost.ptlogin2.qq.com
-    - '+.srv.nintendo.net'
-    - '+.stun.playstation.net'
-    - '+.msftconnecttest.com'
-    - '+.msftncsi.com'
-    - '+.xboxlive.com'
-    - 'msftconnecttest.com'
-    - 'xbox.*.microsoft.com'
-    - '*.battlenet.com.cn'
-    - '*.battlenet.com'
-    - '*.blzstatic.cn'
-    - '*.battle.net'
-  nameserver:
-    - 119.29.29.29
-  fallback-filter:
-    geoip: true
-    ipcidr:
+  fallback:          # 国外 DNS 服务器
+    - https://doh.pub/dns-query
+    - https://dns.alidns.com/dns-query
 
-# 本地节点
-proxies:
+  fallback-filter:   # 回退过滤器
+    geoip: true      # GEOIP 启用
+    geoip-code: CN   # GEOIP 编码
+    ipcidr:          # IPCIDR
+      - 240.0.0.0/4
 
-# 订阅节点
+
+# 策略组
+pr:   &a3 {type: select,   proxies: [自行选择, DIRECT, 自动选择, 香港节点, 台湾节点, 日本节点, 狮城节点, 美国节点] }
+p:    &a1 {type: http,     interval: 86400,  health-check: {enable: true, url: http://www.gstatic.com/generate_204, interval: 1800} }
+auto: &a4 {type: url-test, lazy: true,  url: http://www.gstatic.com/generate_204, interval: 900, use: [Subscribe] }
+use:  &a2 {type: select,   use: [Subscribe] }
+c:    &a6 {type: http,     behavior: classical, interval: 86400}
+d:    &a5 {type: http,     behavior: domain,    interval: 86400}
+i:    &a7 {type: http,     behavior: ipcidr,    interval: 86400}
+
+# 代理提供商
 proxy-providers:
-  Proxy:
-    type: http
-    url: "🧸订阅链接🧸"
-    interval: 3600
-    path: ./ProxyList.yaml
-    health-check:
-      enable: true
-      interval: 600
-      url: http://www.gstatic.com/generate_204
+  Subscribe:
+    <<: *a1
+    url: 🧸订阅链接🧸
+    path: ./proxy_providers/tmp.yaml
+    
+# 代理
+proxies: null
 
-# 过滤节点
-  HK:
-    filter: 港|HK|(?i)Hong
-    type: file
-    path: ./ProxyList.yaml
-    health-check:
-      enable: true
-      interval: 600
-      url: http://www.gstatic.com/generate_204
-
-  TW:
-    filter: 台|TW|(?i)Taiwan
-    type: file
-    path: ./ProxyList.yaml
-    health-check:
-      enable: true
-      interval: 600
-      url: http://www.gstatic.com/generate_204
-
-  SG:
-    filter: 新|狮|SG|(?i)Singapore
-    type: file
-    path: ./ProxyList.yaml
-    health-check:
-      enable: true
-      interval: 600
-      url: http://www.gstatic.com/generate_204
-
-  JP:
-    filter: 日|JP|(?i)Japan
-    type: file
-    path: ./ProxyList.yaml
-    health-check:
-      enable: true
-      interval: 600
-      url: http://www.gstatic.com/generate_204
-
-  US:
-    filter: 美|US|(?i)States|American
-    type: file
-    path: ./ProxyList.yaml
-    health-check:
-      enable: true
-      interval: 600
-      url: http://www.gstatic.com/generate_204
-
-# 代理策略组
+# 策略组
 proxy-groups:
-  - name: "港台番剧"
-    type: select
-    proxies:
-      - DIRECT
-      - 香港节点
-      - 台湾节点
+  - {name: 自行选择, <<: *a2}
+  - {name: 自动选择, <<: *a4}
+  - {name: 苹果服务, <<: *a3}
+  - {name: 港台番剧, <<: *a3}
+  - {name: 国内影视, <<: *a3}
+  - {name: 国际媒体, <<: *a3}
+  - {name: 全球加速, <<: *a3}
+  - {name: 黑白名单, <<: *a3}
 
-  - name: "国内影视"
-    type: select
-    proxies:
-      - DIRECT
-      - 香港节点
-      - 台湾节点
+  - {name: 香港节点, <<: *a4, filter: "香港|港|HK|(?i)HongKong"}
+  - {name: 台湾节点, <<: *a4, filter: "台湾|湾|TW|(?i)Taiwan"}
+  - {name: 日本节点, <<:  *a4, filter: "日本|日|JP|(?i)Japan"}
+  - {name: 狮城节点, <<: *a4, filter: "新加坡|狮|SG|(?i)Singapore"}
+  - {name: 美国节点, <<: *a4, filter: "美国|美|US|(?i)UnitedStates"}
 
-  - name: "国际媒体"
-    type: select
-    proxies:
-      - 香港节点
-      - 台湾节点
-      - 日本节点
-      - 狮城节点
-      - 美国节点
-
-  - name: "全球加速"
-    type: select
-    proxies:
-      - 香港节点
-      - 台湾节点
-      - 日本节点
-      - 狮城节点
-      - 美国节点
-
-  - name: "黑白名单"
-    type: select
-    proxies:
-      - 香港节点
-      - 台湾节点
-      - 日本节点
-      - 狮城节点
-      - 美国节点
-
-  - name: "香港节点"
-    type: url-test
-    use:
-      - HK
-    url: 'http://www.gstatic.com/generate_204'
-    interval: 300
-
-  - name: "台湾节点"
-    type: url-test
-    use:
-      - TW
-    url: 'http://www.gstatic.com/generate_204'
-    interval: 300
-
-  - name: "日本节点"
-    type: url-test
-    use:
-      - JP
-    url: 'http://www.gstatic.com/generate_204'
-    interval: 300
-
-  - name: "狮城节点"
-    type: url-test
-    use:
-      - SG
-    url: 'http://www.gstatic.com/generate_204'
-    interval: 300
-
-  - name: "美国节点"
-    type: url-test
-    use:
-      - US
-    url: 'http://www.gstatic.com/generate_204'
-    interval: 300
-
-# 订阅规则
+# 规则提供商
 rule-providers:
-  规则修正:
-    type: http
-    behavior: classical
-    path: ./Rule/Unbreak.yaml
-    url: https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/Clash/Ruleset/Unbreak.yaml
-    interval: 86400
+  规则修正: {<<: *a6, url: https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/Clash/Ruleset/Unbreak.yaml, path: ./Ruleset/Unbreak.yaml}
 
-  广告拦截:
-    type: http
-    behavior: domain
-    path: ./anti-ad-clash.yaml
-    url: https://raw.githubusercontent.com/privacy-protection-tools/anti-AD/master/anti-ad-clash.yaml
-    interval: 86400
+  广告拦截: {<<: *a5, url: https://raw.githubusercontent.com/privacy-protection-tools/anti-AD/master/anti-ad-clash.yaml, path: ./anti-ad-clash.yaml}
 
-  网络测速:
-    type: http
-    behavior: classical
-    path: ./Rule/Speedtest.yaml
-    url: https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/Clash/Ruleset/Speedtest.yaml
-    interval: 86400
+  网络测速: {<<: *a6, url: https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/Clash/Ruleset/Speedtest.yaml, path: ./Ruleset/Speedtest.yaml}
 
-  国际媒体:
-    type: http
-    behavior: classical
-    path: ./Rule/Streaming.yaml
-    url: https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/Clash/Ruleset/Streaming.yaml
-    interval: 86400
+  国际抖音: {<<: *a6, url: https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/Clash/Ruleset/TikTok.yaml, path: ./Ruleset/TikTok.yaml}
 
-  港台番剧:
-    type: http
-    behavior: classical
-    path: ./Rule/StreamingSE.yaml
-    url: https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/Clash/Ruleset/StreamingSE.yaml
-    interval: 86400
+  国际媒体: {<<: *a6, url: https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/Clash/Ruleset/Streaming.yaml, path: ./Ruleset/Streaming.yaml}
 
-  国内影视:
-    type: http
-    behavior: classical
-    path: ./Rule/StreamingCN.yaml
-    url: https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/Clash/Ruleset/StreamingCN.yaml
-    interval: 86400
+  港台番剧: {<<: *a6, url: https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/Clash/Ruleset/StreamingSE.yaml, path: ./Ruleset/StreamingSE.yaml}
 
-  全球加速:
-    type: http
-    behavior: classical
-    path: ./Rule/Global.yaml
-    url: https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/Clash/Ruleset/Global.yaml
-    interval: 86400
+  国内影视: {<<: *a6, url: https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/Clash/Ruleset/StreamingCN.yaml, path: ./Ruleset/StreamingCN.yaml}
 
-  局域网络:
-    type: http
-    behavior: classical
-    path: ./Rule/Global.yaml
-    url: https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/Clash/Ruleset/LAN.yaml
-    interval: 86400
+  全球加速: {<<: *a6, url: https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/Clash/Ruleset/Global.yaml, path: ./Ruleset/Global.yaml}
 
-# 分流规则
+  苹果服务: {<<: *a6, url: https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/Clash/Ruleset/Apple.yaml, path: ./Ruleset/Apple.yaml}
+
+  局域网络: {<<: *a6, url: https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/Clash/Ruleset/LAN.yaml, path: ./Ruleset/LAN.yaml}
+
+# 规则 
 rules:
   - RULE-SET, 规则修正, DIRECT
   - RULE-SET, 广告拦截, REJECT
   - RULE-SET, 网络测速, 全球加速
+  - RULE-SET, 国际抖音, 国际媒体
   - RULE-SET, 国际媒体, 国际媒体
   - RULE-SET, 港台番剧, 港台番剧
   - RULE-SET, 国内影视, 国内影视
   - RULE-SET, 全球加速, 全球加速
+  - RULE-SET, 苹果服务, 苹果服务
   - RULE-SET, 局域网络, DIRECT
   - GEOIP, CN, DIRECT
   - MATCH, 黑白名单
