--- a/QuantumultX/Matrix3.conf
+++ b/QuantumultX/Matrix3.conf
@@ -1,6 +1,6 @@
 # 配置名称: QuantumultX 配置
 # 配置作者: Centralmatrix3
-# 更新时间: 23-07-14 19:12
+# 更新时间: 23-08-13 01:16
 
 [general]
 # 服务器检查
@@ -175,9 +175,12 @@ event-interaction https://raw.githubusercontent.com/KOP-XIAO/QuantumultX/master/
 event-interaction https://raw.githubusercontent.com/I-am-R-E/Functional-Store-Hub/Master/NodeLinkCheck/Script/NodeLinkCheck.js, tag=代理链路检测, img-url=link.circle.system, enabled=true
 
 [http_backend]
-# BoxJs_HTTP_backend
-# https://chavyleung.gitbook.io/boxjs/
+# BoxJs
+https://chavyleung.gitbook.io/boxjs/
 https://raw.githubusercontent.com/chavyleung/scripts/master/chavy.box.js, host=boxjs.com, tag=BoxJS, path=^/, enabled=false
+
+# AppleTV
+https://raw.githubusercontent.com/crossutility/Quantumult-X/master/backend-icloud-to-http.js, tag=AppleTV, path=^/icloud-profile/, enabled=true
 
 [mitm]
 # 密码与证书
@@ -191,4 +194,4 @@ skip_validating_cert=false
 force_sni_domain_name=false
 
 # 主机名
-hostname = -*snssdk.com, -*.apple.com, -*amemv.com, -*weather-data.apple.com, -*consumer.fcbox.com,-*www.google.com, -*.mzstatic.com, -*.crashlytics.com, -*.icloud.com, testflight.apple.com
+hostname = -*weather-data.apple.com, -*consumer.fcbox.com, -*snssdk.com, -buy.itunes.apple.com, -*amemv.com, -*.crashlytics.com, -www.google.com, -*.mzstatic.com, testflight.apple.com
