--- a/Loon/Matrix3.conf
+++ b/Loon/Matrix3.conf
@@ -1,6 +1,6 @@
 # 配置名称: Loon 配置
 # 配置作者: Centralmatrix3
-# 更新时间: 23-08-13 01:03
+# 更新时间: 23-08-13 01:27
 
 [General]
 # 接口模式
@@ -164,7 +164,8 @@ https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/Loon/Rules
 # HOST
 
 [Script]
-# 脚本
+# TF下载修正
+http-request ^https?:\/\/testflight\.apple\.com\/v\d\/accounts\/.+?\/install$ script-path=https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/Loon/Scripts/TF-Download.Js,requires-body=1,tag=TF下载修正
 
 [Remote Script]
 # 远程脚本
@@ -178,7 +179,7 @@ https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/Loon/Rules
 # ca-passphrase = 
 
 # 主机名
-hostname = -*weather-data.apple.com, -*consumer.fcbox.com, -*snssdk.com, -buy.itunes.apple.com, -*amemv.com, -*.crashlytics.com, -www.google.com, -*.mzstatic.com
+hostname = -*weather-data.apple.com, -buy.itunes.apple.com,testflight.apple.com
 
 # 跳过服务器证书验证
 skip-server-cert-verify = false
