--- a/Shadowrocket/Matrix3.conf
+++ b/Shadowrocket/Matrix3.conf
@@ -1,6 +1,6 @@
 # 配置名称: Shadowrocket 配置
 # 配置作者: Centralmatrix3
-# 更新日期: 23-07-09 20:30
+# 更新日期: 23-08-13 01:31
 
 [General]
 # 旁路系统
@@ -136,7 +136,7 @@ localhost = 127.0.0.1
 
 [MITM]
 # 主机名
-hostname = www.google.cn
+hostname = -*weather-data.apple.com, -buy.itunes.apple.com,www.google.cn
 
 # 密码与证书
 # ca-passphrase =
