--- a/Surge/Matrix3.conf
+++ b/Surge/Matrix3.conf
@@ -1,6 +1,6 @@
 # 配置名称: Surge 配置
 # 配置作者: Centralmatrix3
-# 更新时间: 23-07-18 20:20
+# 更新时间: 23-08-13 01:36
 
 [General]
 # 日志级别
@@ -174,7 +174,7 @@ tcp-connection = false
 h2 = true
 
 # 主机名
-hostname = www.google.cn
+hostname = -*weather-data.apple.com, -buy.itunes.apple.com,testflight.apple.com
 
 # CA密码与P12证书
 # ca-passphrase = 
