--- a/Surge/Matrix3.conf
+++ b/Surge/Matrix3.conf
@@ -174,7 +174,7 @@ tcp-connection = false
 h2 = true
 
 # 主机名
-hostname = -*weather-data.apple.com, -buy.itunes.apple.com,testflight.apple.com
+hostname = -*weather-data.apple.com, -buy.itunes.apple.com,www.google.cn
 
 # CA密码与P12证书
 # ca-passphrase = 
