--- a/Shadowrocket/Matrix5.conf
+++ b/Shadowrocket/Matrix5.conf
@@ -1,143 +1,135 @@
-# > Shadowrocket 矩阵配置 Author:Matrix3
-# > 更新时间:2023-05-01 11:00 UTC/GMT +8
+# 配置名称: Shadowrocket 配置
+# 配置作者: Centralmatrix3
+# 更新日期: 23-08-13 01:47
+
 [General]
-# > 旁路系统
+# 旁路系统
 bypass-system = true
 
-# > 跳过代理
-skip-proxy = 192.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12, localhost, *.local, captive.apple.com
+# 跳过代理
+skip-proxy = 127.0.0.1, 192.168.0.0/16, 10.0.0.0/8, 172.16.0.0/12,100.64.0.0/10,  17.0.0.0/8, *.local, *.crashlytics.com, seed-sequoia.siri.apple.com, localhost, sequoia.apple.com, www.abchina.com.cn
 
-# > Tun排除的路由
+# TUN排除的路由
 tun-excluded-routes = 10.0.0.0/8, 100.64.0.0/10, 127.0.0.0/8, 169.254.0.0/16, 172.16.0.0/12, 192.0.0.0/24, 192.0.2.0/24, 192.88.99.0/24, 192.168.0.0/16, 198.51.100.0/24, 203.0.113.0/24, 224.0.0.0/4, 255.255.255.255/32, 239.255.255.250/32
 
-# > DNS服务器
+# DNS服务器
 dns-server = 223.5.5.5, 119.29.29.29
 
-# > 后备DNS服务器
+# 后备DNS服务器
 fallback-dns-server = system
 
-# > IPv6
-ipv6 = true
+# IPv6
+ipv6 = false
 
-# > 强制IPv6
+# 强制IPv6
 prefer-ipv6 = false
 
-# > DNS回退系统
+# DNS 回退系统
 dns-fallback-system = false
 
-# > DNS 直接系统
+# DNS 直接系统
 dns-direct-system = false
 
-# > ICMP自动回复
+# ICMP自动回复
 icmp-auto-reply = true
 
-# > 始终拒绝URL重写
+# 始终拒绝URL重写
 always-reject-url-rewrite = false
 
-# > 私人IP回答
+# 私人IP回答
 private-ip-answer = true
 
-# > DNS直接后备代理
+# DNS直接后备代理
 dns-direct-fallback-proxy = true
 
-# > UDP策略不支持行为
+# UDP策略不支持行为
 udp-policy-not-supported-behaviour = REJECT
 
+# 更新网址
+update-url = https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/Shadowrocket/Matrix3.conf
+
 [Proxy Group]
-# > 苹果服务
+# 苹果服务
 苹果服务 = select,DIRECT,自动选择,香港节点,台湾节点,日本节点,韩国节点,狮城节点,美国节点,interval=600,timeout=5,select=0,url=http://www.gstatic.com/generate_204
 
-# > 港台番剧
+# 港台番剧
 港台番剧 = select,DIRECT,香港节点,台湾节点,interval=600,timeout=5,select=0,url=http://www.gstatic.com/generate_204
 
-# > 国内媒体
-国内媒体 = select,DIRECT,interval=600,timeout=5,select=0,url=http://www.gstatic.com/generate_204
+# 国内影视
+国内影视 = select,DIRECT,interval=600,timeout=5,select=0,url=http://www.gstatic.com/generate_204
 
-# > 国际媒体
+# 国际媒体
 国际媒体 = select,PROXY,DIRECT,自动选择,香港节点,台湾节点,日本节点,韩国节点,狮城节点,美国节点,interval=600,timeout=5,select=0,url=http://www.gstatic.com/generate_204
 
-# > 全球加速
+# 全球加速
 全球加速 = select,PROXY,DIRECT,自动选择,香港节点,台湾节点,日本节点,韩国节点,狮城节点,美国节点,interval=600,timeout=5,select=0,url=http://www.gstatic.com/generate_204
 
-# > 黑白名单
+# 黑白名单
 黑白名单 = select,PROXY,DIRECT,自动选择,香港节点,台湾节点,日本节点,韩国节点,狮城节点,美国节点,interval=600,timeout=5,select=0,url=http://www.gstatic.com/generate_204
 
-# > 自动选择
-自动选择 = url-test,url=http://www.gstatic.com/generate_204,interval=600,tolerance=100,timeout=5,select=0,policy-regex-filter=^(.(?!(〃◉′ω`◉〃)))*$
+# 自动选择
+自动选择 = url-test,url=http://www.gstatic.com/generate_204,interval=600,tolerance=100,timeout=5,select=0,policy-regex-filter=^
 
-# > 香港节点
-香港节点 = url-test,url=http://www.gstatic.com/generate_204,interval=600,tolerance=100,timeout=5,select=0,policy-regex-filter=(?=.*(香港|港|HK|(?i)HongKong))^((?!(台湾|日本|韩国|新加坡|美国)).)*$
+# 香港节点
+香港节点 = url-test,url=http://www.gstatic.com/generate_204,interval=600,tolerance=100,timeout=5,select=0,policy-regex-filter=香港|港|HK|(?i)HongKong
 
-# > 台湾节点
-台湾节点 = url-test,url=http://www.gstatic.com/generate_204,interval=600,tolerance=100,timeout=5,select=0,policy-regex-filter=(?=.*(台湾|台|TW|(?i)Taiwan))^((?!(香港|日本|韩国|新加坡|美国)).)*$
+# 台湾节点
+台湾节点 = url-test,url=http://www.gstatic.com/generate_204,interval=600,tolerance=100,timeout=5,select=0,policy-regex-filter=台湾|台|TW|(?i)Taiwan
 
-# > 日本节点
-日本节点 = url-test,url=http://www.gstatic.com/generate_204,interval=600,tolerance=100,timeout=5,select=0,policy-regex-filter=(?=.*(日本|日|JP|(?i)Japan))^((?!(香港|台湾|韩国|新加坡|美国)).)*$
+# 日本节点
+日本节点 = url-test,url=http://www.gstatic.com/generate_204,interval=600,tolerance=100,timeout=5,select=0,policy-regex-filter=日本|日|JP|(?i)Japan
 
-# > 韩国节点
-韩国节点 = url-test,url=http://www.gstatic.com/generate_204,interval=600,tolerance=100,timeout=5,select=0,policy-regex-filter=(?=.*(韩国|韩|KR|(?i)SouthKorea))^((?!(香港|台湾|日本|新加坡|美国)).)*$
+# 韩国节点
+韩国节点 = url-test,url=http://www.gstatic.com/generate_204,interval=600,tolerance=100,timeout=5,select=0,policy-regex-filter=韩国|韩|KR|(?i)SouthKorea
 
-# > 狮城节点
-狮城节点 = url-test,url=http://www.gstatic.com/generate_204,interval=600,tolerance=100,timeout=5,select=0,policy-regex-filter=(?=.*(新加坡|狮|SG|(?i)Singapore))^((?!(香港|台湾|日本|韩国|美国)).)*$
+# 狮城节点
+狮城节点 = url-test,url=http://www.gstatic.com/generate_204,interval=600,tolerance=100,timeout=5,select=0,policy-regex-filter=新加坡|狮|SG|(?i)Singapore
 
-# > 美国节点
-美国节点 = url-test,url=http://www.gstatic.com/generate_204,interval=600,tolerance=100,timeout=5,select=0,policy-regex-filter=(?=.*(美国|美|US|(?i)UnitedStates))^((?!(香港|台湾|日本|韩国|新加坡)).)*$
+# 美国节点
+美国节点 = url-test,url=http://www.gstatic.com/generate_204,interval=600,tolerance=100,timeout=5,select=0,policy-regex-filter=美国|美|US|(?i)UnitedStates
 
 [Rule]
-# > 规则修正
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Direct/Direct.list,DIRECT
+# 规则修正
+RULE-SET,https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/Shadowrocket/Ruleset/Unbreak.list,DIRECT
 
-# > 广告拦截
+# 广告拦截
 RULE-SET,https://raw.githubusercontent.com/privacy-protection-tools/anti-AD/master/anti-ad-surge.txt,REJECT
 
-# > 微信直连
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/WeChat/WeChat.list,DIRECT
+# 国际抖音
+RULE-SET,https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/Shadowrocket/Ruleset/TikTok.list,国际媒体
 
-# > 国际抖音
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/TikTok/TikTok.list,国际媒体
+# 国际媒体
+RULE-SET,https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/Shadowrocket/Ruleset/Streaming.list,国际媒体
 
-# > 国际媒体
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/GlobalMedia/GlobalMedia.list,国际媒体
-DOMAIN-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/GlobalMedia/GlobalMedia_Domain.list,国际媒体
+# 港台番剧
+RULE-SET,https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/Shadowrocket/Ruleset/StreamingSE.list,港台番剧
 
-# > 港台番剧
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/BiliBili/BiliBili.list,港台番剧
+# 国内影视
+RULE-SET,https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/Shadowrocket/Ruleset/StreamingCN.list,国内影视
 
-# > 国内媒体
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/ChinaMedia/ChinaMedia.list,国内媒体
+# 全球加速
+RULE-SET,https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/Shadowrocket/Ruleset/Global.list,全球加速
 
-# > 苹果服务
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Apple/Apple.list,苹果服务
-DOMAIN-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Apple/Apple_Domain.list,苹果服务
-# > 全球加速
-RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Global/Global.list,全球加速
-DOMAIN-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Shadowrocket/Global/Global_Domain.list,全球加速
+# 苹果服务
+RULE-SET,https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/Shadowrocket/Ruleset/Apple.list,苹果服务
 
-# > LAN
-IP-CIDR,192.168.0.0/16,DIRECT
-IP-CIDR,10.0.0.0/8,DIRECT
-IP-CIDR,172.16.0.0/12,DIRECT
-IP-CIDR,127.0.0.0/8,DIRECT
+# 局域网络
+RULE-SET,https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/Shadowrocket/Ruleset/LAN.list,DIRECT
 
-# > China
+# 国内规则
 GEOIP,CN,DIRECT
 
-# > Final
+# 最终规则
 FINAL,黑白名单
 
 [Host]
-# > HOST
+# 本地主机
 localhost = 127.0.0.1
 
 [URL Rewrite]
-# > 重写
-^https?://(www.)?g.cn https://www.google.com 302
-^https?://(www.)?google.cn https://www.google.com 302
-
 [MITM]
-# > 生成证书会生成CA-PASSPHRASE与CA-P12信息
-# ca-passphrase = 
-# ca-p12 = 
+# 主机名
+hostname = -*weather-data.apple.com, -buy.itunes.apple.com
 
-# > ENABLE
+# Enable
 enable = true
