--- a/Surge/Matrix5.conf
+++ b/Surge/Matrix5.conf
@@ -1,53 +1,68 @@
-# Surge配置 By Centralmatrix3 2023-07-21
+# 配置名称: Surge 配置
+# 配置作者: Centralmatrix3
+# 更新时间: 23-08-13 01:51
 
 [General]
+# 超时时间
+test-timeout = 3
+# 日志等级
 loglevel = notify
-test-timeout = 5
-internet-test-url = http://taobao.com/
-proxy-test-url = http://cp.cloudflare.com/
-allow-wifi-access = false
-allow-hotspot-access = false
-exclude-simple-hostnames = true
-ipv6 = false
+# IPv6网络
+ipv6 = true
+# DNS服务
 dns-server = 223.5.5.5, 119.29.29.29
-encrypted-dns-server = https://doh.pub/dns-query, https://dns.alidns.com/dns-query
-geoip-maxmind-url = https://github.com/Masaiki/GeoIP2-CN/raw/release/Country.mmdb
+# 允许访问
+allow-wifi-access = true
+allow-hotspot-access = true
+# 服务端口
 wifi-access-http-port = 5588
 wifi-access-socks5-port = 8855
+# 排除简单主机
+exclude-simple-hostnames = true
+# 显示错误页面
 show-error-page-for-reject = true
-http-api = Matrix@127.0.0.1:3355
-http-api-tls = false
-http-api-web-dashboard = true
+# 网络优化
 wifi-assist = false
 udp-priority = false
+# 网络检测
+internet-test-url = http://taobao.com/
+proxy-test-url = http://cp.cloudflare.com/generate_204
+# GEOIP数据库
+geoip-maxmind-url = https://raw.githubusercontent.com/Masaiki/GeoIP2-CN/release/Country.mmdb
+# 跳过代理
 skip-proxy = 127.0.0.1, 192.168.0.0/16, 10.0.0.0/8,172.16.0.0/12,100.64.0.0/10, 17.0.0.0/8, *.local, *.crashlytics.com, seed-sequoia.siri.apple.com, localhost, sequoia.apple.com, www.abchina.com.cn
 
 [Replica]
+# 隐藏苹果请求
 hide-apple-request = 1
+# 隐藏崩溃请求
 hide-crashlytics-request = true
-use-keyword-filter = false
+# 隐藏UDP
 hide-udp = 0
+# 隐藏崩溃记录
 hide-crash-reporter-request = 0
-keyword-filter-type = pattern
+# 使用关键字过滤器
+use-keyword-filter = false
+# 关键字过滤器类型
+keyword-filter-type = none
+# 关键词过滤器
 keyword-filter = *
 
 [Proxy Group]
-自行选择 = select, no-alert=0, hidden=0, include-all-proxies=0, update-interval=0, policy-regex-filter=^, policy-path=订阅链接 // 🧸
-自动选择 = url-test, no-alert=0, hidden=0, include-all-proxies=0, update-interval=0, policy-regex-filter=^, include-other-group=自行选择
-
+自行选择 = select, no-alert=0, hidden=0, include-all-proxies=0, update-interval=0, policy-regex-filter=^, policy-path=Matrix // 订阅链接
+自动选择 = url-test, no-alert=0, hidden=0, include-all-proxies=0, update-interval=0, policy-regex-filter=^, policy-path=https://sub.store/download/collection/Matrix
 苹果服务 = select, DIRECT, REJECT, 自行选择, 自动选择, 香港节点, 台湾节点, 日本节点, 韩国节点, 狮城节点, 美国节点, no-alert=0, hidden=0, include-all-proxies=0
 港台番剧 = select, DIRECT, REJECT, 自行选择, 自动选择, 香港节点, 台湾节点, 日本节点, 韩国节点, 狮城节点, 美国节点, no-alert=0, hidden=0, include-all-proxies=0
 国内影视 = select, DIRECT, REJECT, 自行选择, 自动选择, no-alert=0, hidden=0, include-all-proxies=0
 国际媒体 = select, DIRECT, REJECT, 自行选择, 自动选择, 香港节点, 台湾节点, 日本节点, 韩国节点, 狮城节点, 美国节点, no-alert=0, hidden=0, include-all-proxies=0
 全球加速 = select, DIRECT, REJECT, 自行选择, 自动选择, 香港节点, 台湾节点, 日本节点, 韩国节点, 狮城节点, 美国节点, no-alert=0, hidden=0, include-all-proxies=0
 黑白名单 = select, DIRECT, REJECT, 自行选择, 自动选择, 香港节点, 台湾节点, 日本节点, 韩国节点, 狮城节点, 美国节点, no-alert=0, hidden=0, include-all-proxies=0
-
-香港节点 = url-test, update-interval=0, policy-regex-filter=香港|港|HK|(?i)HongKong, no-alert=0, hidden=1, include-all-proxies=0, include-other-group=自行选择
-台湾节点 = url-test, update-interval=0, policy-regex-filter=台湾|台|TW|(?i)Taiwan, no-alert=0, hidden=1, include-all-proxies=0, include-other-group=自行选择
-日本节点 = url-test, update-interval=0, policy-regex-filter=日本|日|JP|(?i)Japan, no-alert=0, hidden=1, include-all-proxies=0, include-other-group=自行选择
-韩国节点 = url-test, update-interval=0, policy-regex-filter=韩国|韩|KR|(?i)SouthKorea, no-alert=0, hidden=1, include-all-proxies=0, include-other-group=自行选择
-狮城节点 = url-test, update-interval=0, policy-regex-filter=新加坡|新|SG|(?i)Singapore, no-alert=0, hidden=1, include-all-proxies=0, include-other-group=自行选择
-美国节点 = url-test, update-interval=0, policy-regex-filter=美国|美|US|(?i)UnitedStates, no-alert=0, hidden=1, include-all-proxies=0, include-other-group=自行选择
+香港节点 = url-test, update-interval=0, policy-regex-filter=香港|港|HK|(?i)HongKong, no-alert=0, hidden=1, include-all-proxies=0, include-other-group=自动选择
+台湾节点 = url-test, update-interval=0, policy-regex-filter=台湾|台|TW|(?i)Taiwan, no-alert=0, hidden=1, include-all-proxies=0, include-other-group=自动选择
+日本节点 = url-test, update-interval=0, policy-regex-filter=日本|日|JP|(?i)Japan, no-alert=0, hidden=1, include-all-proxies=0, include-other-group=自动选择
+韩国节点 = url-test, update-interval=0, policy-regex-filter=韩国|韩|KR|(?i)SouthKorea, no-alert=0, hidden=1, include-all-proxies=0, include-other-group=自动选择
+狮城节点 = url-test, update-interval=0, policy-regex-filter=新加坡|狮|SG|(?i)Singapore, no-alert=0, hidden=1, include-all-proxies=0, include-other-group=自动选择
+美国节点 = url-test, update-interval=0, policy-regex-filter=美国|美|US|(?i)UnitedStates, no-alert=0, hidden=1, include-all-proxies=0, include-other-group=自动选择
 
 [Rule]
 RULE-SET,https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/Surge/Ruleset/Unbreak.list,DIRECT
@@ -63,11 +78,7 @@ RULE-SET,https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/S
 FINAL,黑白名单,dns-failed
 
 [URL Rewrite]
-^https?:\/\/(www.)?(g|google)\.cn https://www.google.com 302
-^https?:\/\/(ditu|maps).google\.cn https://maps.google.com 302
-
 [MITM]
-skip-server-cert-verify = false
-tcp-connection = false
+tcp-connection = true
 h2 = true
-hostname = www.google.cn
+hostname = -*weather-data.apple.com, -buy.itunes.apple.com
