Update and rename Matrix3.conf to Loon.conf

--- a/Loon/Loon.conf
+++ b/Loon/Loon.conf
@@ -1,6 +1,8 @@
 # 配置名称: Loon 配置
 # 配置作者: Centralmatrix3
 # 更新时间: 23-08-13 01:27
+# 仓库链接: https://github.com/Centralmatrix3/Scripts-Rules
+# 配置链接: https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/Loon/Loon.conf
 
 [General]
 # 接口模式
