--- a/QuantumultX/QuantumultX.conf
+++ b/QuantumultX/QuantumultX.conf
@@ -1,6 +1,8 @@
 # 配置名称: QuantumultX 配置
 # 配置作者: Centralmatrix3
 # 更新时间: 23-08-13 01:28
+# 仓库链接: https://github.com/Centralmatrix3/Scripts-Rules
+# 配置链接: https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/QuantumultX/QuantumultX.conf
 
 [general]
 # 服务器检查
