Update and rename Matrix3.conf to Matrix.conf

--- a/Shadowrocket/Matrix.conf
+++ b/Shadowrocket/Matrix.conf
@@ -1,6 +1,8 @@
 # 配置名称: Shadowrocket 配置
 # 配置作者: Centralmatrix3
 # 更新日期: 23-08-13 01:31
+# 仓库链接: https://github.com/Centralmatrix3/Scripts-Rules
+# 配置链接: https://raw.githubusercontent.com/Centralmatrix3/Scripts-Rules/Master/Shadowrocket/Matrix.conf
 
 [General]
 # 旁路系统
